# my-stock-agent

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/daily_swing_trading_committee_11_specialists/: crew.py  main.py
src/daily_swing_trading_committee_11_specialists/config/: agents.yaml  tasks.yaml
