[project]
name = "daily_swing_trading_committee_11_specialists"
version = "0.1.0"
description = "daily_swing_trading_committee_11_specialists using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.13.0",
]

[project.scripts]
daily_swing_trading_committee_11_specialists = "daily_swing_trading_committee_11_specialists.main:run"
run_crew = "daily_swing_trading_committee_11_specialists.main:run"
train = "daily_swing_trading_committee_11_specialists.main:train"
replay = "daily_swing_trading_committee_11_specialists.main:replay"
test = "daily_swing_trading_committee_11_specialists.main:test"
run_with_trigger = "daily_swing_trading_committee_11_specialists.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
